[gd_scene load_steps=3 format=3 uid="uid://ckktm4jpoq58i"]

[ext_resource type="Script" path="res://scripts/Dialouge Code:Quest/npc_quest.gd" id="1_h7dta"]
[ext_resource type="Texture2D" uid="uid://bs6v3yqebd5c5" path="res://Assets/Items/inventory-slot.png" id="1_vfkte"]

[node name="npc_quest" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_h7dta")

[node name="quest1_ui" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="quest1_ui"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 109.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Rose's Quest
"

[node name="text" type="RichTextLabel" parent="quest1_ui"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
text = "Could you find me some food?
"

[node name="no_1" type="Button" parent="quest1_ui"]
layout_mode = 0
offset_left = 113.0
offset_top = 36.0
offset_right = 148.0
offset_bottom = 67.0
scale = Vector2(0.7, 0.7)
text = "No
"

[node name="yes_1" type="Button" parent="quest1_ui"]
layout_mode = 0
offset_left = 74.0
offset_top = 36.0
offset_right = 109.0
offset_bottom = 67.0
scale = Vector2(0.7, 0.7)
text = "Yes
"

[node name="no_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="no_quest"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 109.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Rose's Quest
"

[node name="text" type="RichTextLabel" parent="no_quest"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
text = "No Current Quest!"

[node name="complete" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="complete"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 109.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Rose's Quest"

[node name="text" type="RichTextLabel" parent="complete"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
text = "Thank you so much for the help. I really needed to eat. There's a key hidden in a security room"

[node name="quest_ui2" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="quest_ui2"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 109.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Rick's Quest
"

[node name="text" type="RichTextLabel" parent="quest_ui2"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
text = "I lost my pet Rockie. Can you help?
"

[node name="no_2" type="Button" parent="quest_ui2"]
layout_mode = 0
offset_left = 113.0
offset_top = 36.0
offset_right = 148.0
offset_bottom = 67.0
scale = Vector2(0.7, 0.7)
text = "No
"

[node name="yes_2" type="Button" parent="quest_ui2"]
layout_mode = 0
offset_left = 74.0
offset_top = 36.0
offset_right = 109.0
offset_bottom = 67.0
scale = Vector2(0.7, 0.7)
text = "Yes
"

[node name="no_quest2" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="no_quest2"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 109.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Rick's Quest
"

[node name="text" type="RichTextLabel" parent="no_quest2"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
text = "No Current Quest!"

[node name="complete2" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="complete2"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 109.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Rick's  Quest"

[node name="text" type="RichTextLabel" parent="complete2"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
text = "Theres a flashlight in the giftshop here! Thanks for finding Rockie!"

[node name="quest_ui3" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="quest_ui3"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 163.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Roger's Quest
"

[node name="text" type="RichTextLabel" parent="quest_ui3"]
layout_mode = 0
offset_left = 11.0
offset_top = 16.0
offset_right = 218.0
offset_bottom = 75.0
scale = Vector2(0.7, 0.7)
text = "While looking for Rose, I lost my Manual
"

[node name="no_3" type="Button" parent="quest_ui3"]
layout_mode = 0
offset_left = 129.0
offset_top = 36.0
offset_right = 164.0
offset_bottom = 67.0
scale = Vector2(0.7, 0.7)
text = "No
"

[node name="yes_3" type="Button" parent="quest_ui3"]
layout_mode = 0
offset_left = 100.0
offset_top = 36.0
offset_right = 135.0
offset_bottom = 67.0
scale = Vector2(0.7, 0.7)
text = "Yes
"

[node name="no_quest3" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="no_quest3"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 157.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Roger's Quest
"

[node name="text" type="RichTextLabel" parent="no_quest3"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
text = "No Current Quest!"

[node name="complete3" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 65.0
texture = ExtResource("1_vfkte")

[node name="name" type="RichTextLabel" parent="complete3"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 167.0
offset_bottom = 42.0
scale = Vector2(0.6, 0.6)
text = "Roger's Quest"

[node name="text" type="RichTextLabel" parent="complete3"]
layout_mode = 0
offset_left = 11.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
text = "The lockpick is used for those pesky chained up rooms. You can also use the crowbar for wood!"

[connection signal="pressed" from="quest1_ui/no_1" to="." method="_on_no_1_pressed"]
[connection signal="pressed" from="quest1_ui/yes_1" to="." method="_on_yes_1_pressed"]
[connection signal="pressed" from="quest_ui2/no_2" to="." method="_on_no_1_pressed"]
[connection signal="pressed" from="quest_ui2/yes_2" to="." method="_on_yes_1_pressed"]
[connection signal="pressed" from="quest_ui3/no_3" to="." method="_on_no_1_pressed"]
[connection signal="pressed" from="quest_ui3/yes_3" to="." method="_on_yes_1_pressed"]
